--- a/app/Tpl/admin/post_upload/index.html
+++ b/app/Tpl/admin/post_upload/index.html
@@ -1,70 +1,70 @@
 <include file="public:header" />
 <div class="pad_10" >
     <table width="100%" >
-        <form action="/index.php?g=admin&m=post_cate&a=upload_cate" method="post" enctype="multipart/form-data">
+        <form action="/index.php?g=admin&m=post_upload&a=upload_cate" method="post" enctype="multipart/form-data">
             <tr>
                 <td align="center" style="width:150px">一级分类上传：</td>
                 <td align="center" style="width:200px;"><input type="file"  class="input-text" name="file"></td>
                 <td><input name="submit" type="submit"  id="submit" value="上传" class="button" /></td>
             </tr>
         </form>
-        <form action="/index.php?g=admin&m=post_cate&a=upload_cate2" method="post" enctype="multipart/form-data">
+        <form action="/index.php?g=admin&m=post_upload&a=upload_cate2" method="post" enctype="multipart/form-data">
             <tr>
                 <td align="center" style="width:150px">二级分类上传：</td>
                 <td align="center" style="width:200px;"><input type="file"  class="input-text" name="file"></td>
                 <td><input name="submit" type="submit"  id="submit" value="上传" class="button" /></td>
             </tr>
         </form>
-        <form action="/index.php?g=admin&m=post_cate&a=upload_post" method="post" enctype="multipart/form-data">
+        <form action="/index.php?g=admin&m=post_upload&a=upload_post" method="post" enctype="multipart/form-data">
             <tr>
                 <td align="center" style="width:150px">商品上传：</td>
                 <td align="center" style="width:200px;"><input type="file"  class="input-text" name="file"></td>
                 <td><input name="submit" type="submit"  id="submit" value="上传" class="button" /></td>
             </tr>
         </form>
-        <form action="/index.php?g=admin&m=post_cate&a=upload_post_cate_re" method="post" enctype="multipart/form-data">
+        <form action="/index.php?g=admin&m=post_upload&a=upload_post_cate_re" method="post" enctype="multipart/form-data">
             <tr>
                 <td align="center" style="width:150px">商品扩展分类上传：</td>
                 <td align="center" style="width:200px;"><input type="file"  class="input-text" name="file"></td>
                 <td><input name="submit" type="submit"  id="submit" value="上传" class="button" /></td>
             </tr>
         </form>
-        <form action="/index.php?g=admin&m=post_cate&a=upload_post_tag" method="post" enctype="multipart/form-data">
+        <form action="/index.php?g=admin&m=post_upload&a=upload_post_tag" method="post" enctype="multipart/form-data">
             <tr>
                 <td align="center" style="width:150px">post_tag上传：</td>
                 <td align="center" style="width:200px;"><input type="file"  class="input-text" name="file"></td>
                 <td><input name="submit" type="submit"  id="submit" value="上传" class="button" /></td>
             </tr>
         </form>
-        <form action="/index.php?g=admin&m=post_cate&a=upload_tag" method="post" enctype="multipart/form-data">
+        <form action="/index.php?g=admin&m=post_upload&a=upload_tag" method="post" enctype="multipart/form-data">
             <tr>
                 <td align="center" style="width:150px">tag上传：</td>
                 <td align="center" style="width:200px;"><input type="file"  class="input-text" name="file"></td>
                 <td><input name="submit" type="submit"  id="submit" value="上传" class="button" /></td>
             </tr>
         </form>
-        <form action="/index.php?g=admin&m=post_cate&a=upload_mall_cate" method="post" enctype="multipart/form-data">
+        <form action="/index.php?g=admin&m=post_upload&a=upload_mall_cate" method="post" enctype="multipart/form-data">
             <tr>
                 <td align="center" style="width:150px">商城一级分类上传：</td>
                 <td align="center" style="width:200px;"><input type="file"  class="input-text" name="file"></td>
                 <td><input name="submit" type="submit"  id="submit" value="上传" class="button" /></td>
             </tr>
         </form>
-        <form action="/index.php?g=admin&m=post_cate&a=upload_mall_cate_re" method="post" enctype="multipart/form-data">
+        <form action="/index.php?g=admin&m=post_upload&a=upload_mall_cate_re" method="post" enctype="multipart/form-data">
             <tr>
                 <td align="center" style="width:150px">商城扩展分类上传：</td>
                 <td align="center" style="width:200px;"><input type="file"  class="input-text" name="file"></td>
                 <td><input name="submit" type="submit"  id="submit" value="上传" class="button" /></td>
             </tr>
         </form>
-        <form action="/index.php?g=admin&m=post_cate&a=upload_mall" method="post" enctype="multipart/form-data">
+        <form action="/index.php?g=admin&m=post_upload&a=upload_mall" method="post" enctype="multipart/form-data">
             <tr>
                 <td align="center" style="width:150px">商城上传：</td>
                 <td align="center" style="width:200px;"><input type="file"  class="input-text" name="file"></td>
                 <td><input name="submit" type="submit"  id="submit" value="上传" class="button" /></td>
             </tr>
         </form>
-        <form action="/index.php?g=admin&m=post_cate&a=upload_mall_comment" method="post" enctype="multipart/form-data">
+        <form action="/index.php?g=admin&m=post_upload&a=upload_mall_comment" method="post" enctype="multipart/form-data">
             <tr>
                 <td align="center" style="width:150px">商城评论上传：</td>
                 <td align="center" style="width:200px;"><input type="file"  class="input-text" name="file"></td>
