--- a/app/Tpl/admin/post_upload/index.html
+++ b/app/Tpl/admin/post_upload/index.html
@@ -64,6 +64,13 @@
                 <td><input name="submit" type="submit"  id="submit" value="上传" class="button" /></td>
             </tr>
         </form>
+        <form action="/index.php?g=admin&m=post_upload&a=upload_mall_re" method="post" enctype="multipart/form-data">
+            <tr>
+                <td align="center" style="width:150px">商城cid上传：</td>
+                <td align="center" style="width:200px;"><input type="file"  class="input-text" name="file"></td>
+                <td><input name="submit" type="submit"  id="submit" value="上传" class="button" /></td>
+            </tr>
+        </form>
         <form action="/index.php?g=admin&m=post_upload&a=upload_mall_comment" method="post" enctype="multipart/form-data">
             <tr>
                 <td align="center" style="width:150px">商城评论上传：</td>
