--- a/app/Tpl/home/default/mall/info.html
+++ b/app/Tpl/home/default/mall/info.html
@@ -15,7 +15,7 @@
     			</div>	
 				
 				<div class="businesinfo clearfix">
-					<a class="businessinfo_logo fl" href="{:mall_url($info)}" target="_blank"><img src="{:attach($info['img'],'mall')}"/></a>
+					<a class="businessinfo_logo fl" href="{:mall_url($info)}" target="_blank"><img src="{:attach($info['img'],'mall')}" width="186"/></a>
 					<div class="businessinfo_text fr">
 						<h3>{$info.title}</h3>
 						<p><span class="businessinfo_icon">商城地址：</span><em class="businessinfo_textinfo"><a class="blue" href="{:mall_url($info)}" target="_blank">{$info.domain}</a></em>
@@ -26,20 +26,14 @@
 				</div>
 				
 				<div class="featured_pro clearfix">
-					<h3 class="fl">精选商品</h3>
-					<a class="fr" href="{:u('tag/index',array('title'=>$info['title']))}" target="_blank">更多></a>
+					<h3 class="fl">值得买</h3>
 				</div>
 			
 				<div class="featuredbox clearfix">
                     <volist name="info['post_list']" id="val">
 					<div class="featured">
 						<div class="product">
-                            <div class="like">
-                                <div class="ilike">
-                                    <a class="J_favs" data-id="{$val.id}">{$val.favs}</a>
-                                    <a class="ilike_icon2" target="_blank" href="{:item_rewrite($val,'post')}#J_messagebox">{$val.comments}</a>
-                                </div>
-                            </div>
+
 							<div class="pro_img">
 								<a href="{:item_rewrite($val,'post')}" class="proimg_pic" target="_blank"><img src="{:attach($val['img'],'post')}"/></a>
 							</div>
