--- a/app/Tpl/home/default/user/register.html
+++ b/app/Tpl/home/default/user/register.html
@@ -11,7 +11,7 @@
                         <div class="fr loginBoxRel"><a href="{:U('user/login')}">登录</a></div>
                     </div>
                     <div class="loginNotice">
-                    	<div class="fontTitle">为什么要注册什么值得买？<br>您可以：</div>
+                    	<div class="fontTitle">为什么要注册挖宝贝？<br>您可以：</div>
                     	<ul class="perNotice">
                     		<li>与网友进行讨论及互动；</li>
                     		<li>收藏您喜欢的文章和内容；</li>
