--- a/app/Tpl/home/default/jiukuaiyou/index.html
+++ b/app/Tpl/home/default/jiukuaiyou/index.html
@@ -57,7 +57,7 @@
                                     </if>
                                     <a class="inform_title" href="{:item_rewrite($item,'jiukuaiyou')}" target="_blank" title="{$item.title}">
                                         <i <if condition="$item['is_duxiang']">class="tao-d"</if> title="{$item.title}"></i>
-                                        {$item.title}
+                                        {$item.title}&nbsp;&nbsp;<font style="color:#D71212">{$item.slogan}</font>
                                     </a>
                                 </h3>
                                 <div class="pic">
@@ -65,15 +65,11 @@
                                         <img class="img" alt="{$item.title}" src="{:attach($item['img'],'jky_item')}"/>
                                     </a>
                                 </div>
-                                <div class="buy_mask">
-                                </div>
-                                <div class="buy_state clearfix">
-                                    <span class="begin_time"> 开始：{:date("m月d日H时i分",$item['stime'])} </span>
-                                </div>
+
+
                                 <div class="buy_content">
                                     <a target="_blank" href="{:U('jiukuaiyou/go',array('id'=>$item['id']))}" class="buy_action clearfix">
-                                        <span class="price"><em>￥</em>{$item['price']}</span>
-                                        <span class="oldprice_1">￥{$item.mprice}</span>
+
                                         <b class="btn"></b>
                                     </a>
                                 </div>
