--- a/app/Tpl/home/default/public/footer.html
+++ b/app/Tpl/home/default/public/footer.html
@@ -22,15 +22,15 @@
                         <a href="javascript:;">帮助中心</a>
                         <a href="javascript:;">常见问题</a>
                     </li>
-                    <li class="toplogo item"><a href="/" class=""><img class="fl" src="__LOGO__"/></a></li>
+                    <li class="toplogo item"><a href="/" class=""><img class="fl" src="/data/upload/logo/51ef882098a1b.jpg"/></a></li>
 
                     <div class="foot-follow fr">
-                        <a rel="nofollow" href="http://weibo.com/wadongxi" walink="http://weibo.com/wadongxi" target="_blank" class="follow-weibo" _hover-ignore="1" _orighref="http://weibo.com/wadongxi" _tkworked="true"></a>
+                        <a rel="nofollow" href="http://weibo.com/wabaobei" walink="http://weibo.com/wabaobei" target="_blank" class="follow-weibo" _hover-ignore="1" _orighref="http://weibo.com/wadongxi" _tkworked="true"></a>
                         <a href="javascript:;" class="follow-weixin" rel="nofollow">
                             <div class="weixin-qrcode"></div>
                         </a>
                         <a href="javascript:;" class="follow-qzone" rel="nofollow"></a>
-                        <a rel="nofollow" href="http://t.qq.com/wadongxi" walink="http://t.qq.com/wadongxi" target="_blank" class="follow-tweibo"></a>
+                        <a rel="nofollow" href="http://t.qq.com/wababe" walink="http://t.qq.com/wababe" target="_blank" class="follow-tweibo"></a>
                     </div>
                 </ul>		
 				<div class="flink">
