--- a/app/Tpl/home/default/jiukuaiyou/detail.html
+++ b/app/Tpl/home/default/jiukuaiyou/detail.html
@@ -8,29 +8,15 @@
         <div class="contentbox clearfix">
             <div class="contentbox_l fl jky_detail">
                 <div class="crumbBox clearfix"> <span>当前位置:</span> <a href="/">首页 </a>&gt;&gt;&nbsp; <a href="{:u( MODULE_NAME.'/index')}">九块邮</a> &nbsp;&gt;&gt;&nbsp; <span class="grey">日志详情</span> </div>
-                <div class="m15"> <a class="jky_title">{$info.title}</a>
+                <div class="m15"> <a class="jky_title">{$info.title}&nbsp;&nbsp;<font style="color:#D71212">{$info.slogan}</font></a>
                     <div class="clearfix content mt10"> <a href="{:U(MODULE_NAME.'/go',array('id'=>$info['id']))}" class="jky_img fl" target="_blank"><img src="{:attach($info['img'],'jky_item')}"/></a>
                         <div class="goods_detail">
                             <div class="price_tag tag_{$info.state}"> 
-                                <i>¥</i>{:intval($info['price'])}
-                                <span>
-                                .{:get_float_digit($info['price'])}
-                                </span>
-                                <span class="ori_price">￥{$info.mprice}</span> 
-                                <a id="pte_buy" <if condition="$info['state'] eq 'underway'"> class="J_get_anhao" data-id="{$info['id']}"</if>></a> 
+
+                                <a id="pte_buy" target="_blank" href="{:U(MODULE_NAME.'/go',array('id'=>$info['id']))}" <if condition="$info['state'] eq 'underway'"> class="J_get_anhao" data-id="{$info['id']}"</if>></a>
                             </div>
-                            <div class="goods_quan new_quan">
-                                <div class="change_bottom">
-                                    <p class="shoot_time">剩余时间： <span class="J_remain_time" data-time="{$info['etime']-time()}"></span></p>
-                                </div>
-                            </div>
-                            <div class="change_recommend">                                
-                                <span class="join-people">{$info.join_number}人已参加</span>
-                                <ul class="usericonlist">
-                                    <volist name="info['join_user_list']" id="val">
-                                        <li><img class="r3 icard" src="{:avatar($val['uid'])}" alt="{$val.uname}" title="{$val.uname}"/></li>
-                                    </volist>
-                                </ul>
+                            <div style="font-size: 14px; line-height: 20px" class="m15">
+                            {$info.info}
                             </div>
                             <div class="shareto"> <span class="share_txt">分享到：</span>
                                 <div class="sharebaidu"> 
@@ -49,9 +35,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="clearfix m15">
-                        {$info.info}
-                    </div>
+
                     <!--我要留言开始-->
                     <div class="messagebox" id="J_messagebox">
                         <div class="title_wrap">
@@ -90,9 +74,9 @@
                         <ul class="shijiu_list">
                             <volist name="like_list" id="item"> <li 
                                 <if condition="$i%4 eq 0">class="no_mr"</if>
-                                > <a target="_blank" href="{:U(MODULE_NAME.'/detail',array('id'=>$id))}" class="pic"> <img src="{:attach($item['img'],'jky_item')}" style="display: inline;"/> </a>
-                                <p class="title_name"> <a target="_blank" href="{:U(MODULE_NAME.'/detail',array('id'=>$id))}">{$item.title}</a></p>
-                                <p class="detail"> <span class="price">￥{$item.price}</span> <a class="go_action" target="_blank" href="{:U(MODULE_NAME.'/detail',array('id'=>$id))}">去抢购&gt;&gt;</a></p>
+                                > <a target="_blank" href="{:U(MODULE_NAME.'/detail',array('id'=>$item['id']))}" class="pic"> <img src="{:attach($item['img'],'jky_item')}" style="display: inline;"/> </a>
+                                <p class="title_name"> <a target="_blank" href="{:U(MODULE_NAME.'/detail',array('id'=>$item['id']))}">{$item.title}</a></p>
+
                                 </li>
                             </volist>
                         </ul>
