--- a/app/Tpl/home/default/help/cate_tree.html
+++ b/app/Tpl/home/default/help/cate_tree.html
@@ -3,9 +3,8 @@
     <ul>
         <li><a href="__ROOT__/about.html">关于我们</a></li>
         <li><a href="__ROOT__/contact.html">联系我们</a></li>
-        <li><a href="__ROOT__/friends.html">合作伙伴</a></li>
         <li><a href="__ROOT__/flink.html">友情链接</a></li>
-        <li><a href="__ROOT__/partner.html">商务合作</a></li>
+        <li><a href="__ROOT__/partner.html">加入我们</a></li>
     </ul>
     <div class="title">获取帮助</div>
     <ul>
