--- a/app/Tpl/home/default/public/footer.html
+++ b/app/Tpl/home/default/public/footer.html
@@ -10,10 +10,10 @@
                 <ul class="help_list clearfix">
                     <li class="item">
                         <h3>关于挖宝贝</h3>
-                        <a href="about.html">关于我们</a>
-                        <a href="contact.html">联系我们</a>
-                        <a href="flink.html">友情链接</a>
-                        <a href="partner.html">网站地图</a>
+                        <a href="/about.html">关于我们</a>
+                        <a href="/contact.html">联系我们</a>
+                        <a href="/flink.html">友情链接</a>
+                        <a href="/partner.html">加入我们</a>
                     </li>
                     <li class="item">
                         <h3>新手入门</h3>
