--- a/app/Tpl/home/default/public/ajax_post_list.html
+++ b/app/Tpl/home/default/public/ajax_post_list.html
@@ -19,7 +19,7 @@
                             <if condition="$i lt count($val['cate_list'])">,</if>
                             </volist>
                         </span>
-                        <span class="fr">推荐人：<a href="{:U('tag/index',array('uname'=>$val['uname']))}" target="_blank">{$val.uname}</a></span>
+                        <span class="fr">推荐人：<font style="color:#5183C0">{$val.uname}</font></span>
                     </div>
                 </div>
             </div>
