--- a/app/Tpl/home/default/public/header.html
+++ b/app/Tpl/home/default/public/header.html
@@ -53,7 +53,7 @@
 	</div>	
 	<!--推荐类别开始-->
 	<div class="sidebox">
-		<div class="side_head"><h3><a href="/zdm/">推荐类别</a></h3></div>
+		<div class="side_head"><h3><a href="/zhi/">推荐类别</a></h3></div>
 		<div class="side_body">
 			<ul>
                 <volist name="recommend_cate" id="val">
