--- a/app/Tpl/home/default/user/menu.html
+++ b/app/Tpl/home/default/user/menu.html
@@ -12,7 +12,7 @@
   </div>
   <div class="user-mana">
     <h2>
-      <a href="{:u('user/index')}">我的值得买</a>
+      <a href="{:u('user/index')}">我的挖宝贝</a>
     </h2>  
     <dl>
       <dt <if condition="MODULE_NAME eq 'user' and ACTION_NAME eq 'profile'">class="on"</if>>
