--- a/app/Tpl/home/default/public/header.html
+++ b/app/Tpl/home/default/public/header.html
@@ -11,7 +11,8 @@
     <load href="__STATIC__/js/jquery/plugins/jquery.cookie.js" />
     <title>{$page_seo.title}</title>    
     <meta name="keywords" content="{$page_seo.keywords}" />
-    <meta name="description" content="{$page_seo.description}" />       
+    <meta name="description" content="{$page_seo.description}" />
+    <meta property="qc:admins" content="1561272035671217251636" />
     <script src="__ROOT__/index.php?m={:MODULE_NAME}&a={:ACTION_NAME}&act=loadjs"></script>  
 </head>
 <body>
