--- a/app/Tpl/home/default/public/footer.html
+++ b/app/Tpl/home/default/public/footer.html
@@ -99,9 +99,11 @@ var lang = {};
 <script type="text/javascript">
     document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static/js/shell_v2.js?cdnversion=" + Math.ceil(new Date()/3600000)
 </script>
+<div style="display: none">
 <script type="text/javascript">
     var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
     document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F5c7fde45c568a5227bb8118f4525d50c' type='text/javascript'%3E%3C/script%3E"));
 </script>
+</div>
 </body>
 </html>
