--- a/app/Tpl/home/default/public/header.html
+++ b/app/Tpl/home/default/public/header.html
@@ -13,6 +13,7 @@
     <meta name="keywords" content="{$page_seo.keywords}" />
     <meta name="description" content="{$page_seo.description}" />
     <meta property="qc:admins" content="1561272035671217251636" />
+    <meta property="wb:webmaster" content="96ba23dc561109a2" />
     <script src="__ROOT__/index.php?m={:MODULE_NAME}&a={:ACTION_NAME}&act=loadjs"></script>  
 </head>
 <body>
