--- a/app/Tpl/home/default/public/footer.html
+++ b/app/Tpl/home/default/public/footer.html
@@ -99,6 +99,23 @@ var lang = {};
 <script type="text/javascript">
     document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static/js/shell_v2.js?cdnversion=" + Math.ceil(new Date()/3600000)
 </script>
+<script type='text/javascript'>
+    var _jjl = new Date().toDateString().replace(/\s/g, '') + new Date().toTimeString().replace(/:\d{2}:\d{2}\sUTC[+]\d{4}$/g, '');
+    document.write(unescape("%3Cscript src='http://p.yiqifa.com/js/juejinlian.js' type='text/javascript'%3E%3C/script%3E"));
+    document.write(unescape("%3Cscript src='http://p.yiqifa.com/jj?_jjl.js' type='text/javascript'%3E%3C/script%3E"));
+    document.write(unescape("%3Cscript src='http://p.yiqifa.com/js/md.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type='text/javascript'>
+    try{
+        var siteId = 745701;
+        document.write(unescape("%3Cscript src='http://p.yiqifa.com/jj?sid=" + siteId + "&_jjl.js' type='text/javascript'%3E%3C/script%3E"));
+        var jjl = JueJinLian._init();
+        jjl._addWid(siteId);
+        jjl._addE("wabaobei");
+        jjl._addScope(0);
+        jjl._run();
+    }catch(e){}
+</script>
 <div style="display: none">
 <script type="text/javascript">
     var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
