--- a/app/Tpl/admin/post_link/index.html
+++ b/app/Tpl/admin/post_link/index.html
@@ -1,8 +1,10 @@
 <include file="public:header" />
 <div class="pad_10" >
-    <p>批量处理：</p>
     <form action="/index.php?g=admin&m=post_link&a=link_handle" method="post" enctype="multipart/form-data">
-        <input name="submit" type="submit"  id="submit" value="开始" class="button" />
+        链接处理：<input name="submit" type="submit"  id="submit" value="开始" class="button" />
+    </form>
+    <form action="/index.php?g=admin&m=post_link&a=info_handle" method="post" enctype="multipart/form-data">
+        内容处理：<input name="submit" type="submit"  id="submit" value="开始" class="button" />
     </form>
 </div>
 <include file="public:footer" />
