--- a/app/Tpl/home/default/public/header.html
+++ b/app/Tpl/home/default/public/header.html
@@ -70,19 +70,19 @@
 <div id="main" style="z-index:50;">
         <div class="clearfix">
             <div class="logo"><a href="__ROOT__/">高性价比产品网购推荐，值得您经常来看看</a></div>
-            <div class="topAd">
-            	<div class="not_left_ce">
-    				<span class="not_a1" onmouseout="gstart()" onmouseover="gstop()" style="cursor:pointer;" onclick="goup()"><img src="__ASSETS__/images/notice_left.png"></span>
-    				<span class="not_a2" onmouseout="gstart()" onmouseover="gstop()" style="cursor:pointer;" onclick="godown()"><img src="__ASSETS__/images/notice_right.png"></span>
-    			</div>
-    			<div id="news">
-    			     <ul id="topAd" onmouseout="gstart()" onmouseover="gstop()" style="margin-top: 0px;">
-                        <volist name="gonggao_list" id="val">
-                        <li><a href="{:u('article/index',array('id'=>$val['id']))}" target="_blank">{$val.title}</a></li>
-                        </volist>
-                    </ul>
-    			</div>
-            </div>
+            <!--<div class="topAd">-->
+            	<!--<div class="not_left_ce">-->
+    				<!--<span class="not_a1" onmouseout="gstart()" onmouseover="gstop()" style="cursor:pointer;" onclick="goup()"><img src="__ASSETS__/images/notice_left.png"></span>-->
+    				<!--<span class="not_a2" onmouseout="gstart()" onmouseover="gstop()" style="cursor:pointer;" onclick="godown()"><img src="__ASSETS__/images/notice_right.png"></span>-->
+    			<!--</div>-->
+    			<!--<div id="news">-->
+    			     <!--<ul id="topAd" onmouseout="gstart()" onmouseover="gstop()" style="margin-top: 0px;">-->
+                        <!--<volist name="gonggao_list" id="val">-->
+                        <!--<li><a href="{:u('article/index',array('id'=>$val['id']))}" target="_blank">{$val.title}</a></li>-->
+                        <!--</volist>-->
+                    <!--</ul>-->
+    			<!--</div>-->
+            <!--</div>-->
         </div>
         <div class="navbox">
             <div class="nav">
